--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.14",
     "@tanstack/react-query": "^5.28.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
